# later-darker

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  LaterDarker.sln  README.md  config.py  later-darker.sln  later-darker.vcxproj  main.cpp
.github/workflows/: cmake-build.yaml  windows.yaml
later-darker.xcodeproj/: project.pbxproj
later-darker.xcodeproj/xcshareddata/xcschemes/: later-darker.xcscheme
shader/: cube.frag  cube.vert  shaders.txt  triangle.frag  triangle.vert
src/: gl.hpp  gl_common.cpp  gl_debug.cpp  gl_debug.hpp  gl_shader.cpp  gl_shader.hpp  gl_shader_compo.cpp  gl_shader_data.cpp  gl_shader_data.hpp  gl_shader_dev.cpp  gl_shader_full.cpp  gl_windows.cpp  log.cpp  log.hpp  log_internal.hpp  log_standard.cpp  log_standard.hpp  log_unix.cpp  log_windows.cpp  main.cpp  main.hpp  main.rs  main_windows_compo.cpp  os_file.hpp  os_file_unix.cpp  os_file_windows.cpp  os_string.cpp  os_string.hpp  os_unix.cpp  os_unix.hpp  os_windows.cpp  os_windows.hpp  scene_cube.cpp  scene_cube.hpp  scene_triangle.cpp  scene_triangle.hpp  text_buffer.cpp  text_buffer.hpp  text_unicode.cpp  text_unicode.hpp  (+6 more)
support/: Common.props  sources.xml
tools/: CMakeLists.txt  Cargo.toml  shader.cpp
tools/src/: emit.rs  error.rs  gl.rs  identifier.rs  intern.rs  main.rs  parse.rs  shader.rs  spec.rs  vsenv.rs  xmlgen.rs  xmlparse.rs
tools/src/command/: build.rs  buildinfo.rs  gl.rs  glemit.rs  glscan.rs  listsources.rs  mod.rs  shader.rs  vsenv.rs  vsgen.rs
tools/src/gl/: api.rs  mod.rs  registry.rs  scan.rs
tools/src/project/: buildinfo.rs  buildtag.rs  condition.rs  config.rs  generator.rs  mod.rs  paths.rs  sources.rs  visualstudio.rs
tools/src/project/visualstudio/: mod.rs  project.rs
tools/src/shader/: data.rs  emit.rs  mod.rs  parse.rs  spec.rs
